# sysadmin

./: .gitignore  CLAUDE.md  Dockerfile  README.md  blog.md  openenv.yaml  pyproject.toml  test_grpo_debug.py
dataset/: sft_train.jsonl  sft_val.jsonl
docker/: sandbox.Dockerfile
notebooks/: train_grpo.ipynb  train_sysadmin.ipynb
spaces/: Dockerfile  README.md  app.py  entrypoint.sh
sysadmin_env/: __init__.py  blocklist.py  client.py  environment.py  models.py  openenv_adapter.py  reward.py  sandbox.py
sysadmin_env/scenarios/: __init__.py  base.py  disk_full.py  disk_full_alt.py  expired_cert.py  nginx_syntax.py  nginx_unknown.py  ownership.py  port_bound.py  runaway_cpu.py  stale_pid.py  venv_broken.py
sysadmin_env/server/: __init__.py  app.py  openenv_app.py
tests/: __init__.py  test_blocklist.py  test_models.py  test_reward.py
training/: __init__.py  agent.py  colab_grpo_support.py  demo.py  evaluate.py  train_grpo.py  train_openenv_grpo.py  train_sft.py
